[package]
name = "cve-2020-1054"
version = "0.1.0"
authors = ["root <53204152+0xeb-bp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "^0.3.8", features = ["wingdi", "winuser", 
    "processthreadsapi", "handleapi", "memoryapi", "psapi" ] }
ntapi = "0.3.3"

